<resources>
    <string name="app_name">Leave the House - Checklist</string>
    <string name="password">Passwort</string>
    <string name="forgotPassword">Passwort vergessen</string>
    <string name="email">E-Mail</string>
    <string name="firstname">Vorname</string>
    <string name="lastname">Nachname</string>
    <string name="signUp">Noch kein Konto? \n Registrieren</string>
    <string name="minimum_password">Passwort zu kurz. Mindestlänge 6 Zeichen!</string>
    <string name="auth_failed">Fehler. E-Mail und Passwort überprüfen</string>
    <string name="listOverview">Meine Listen</string>
    <string name="profil">Profil</string>
    <string name="logout">Logout</string>
    <string name="deleteAccount">Account löschen</string>
    <string name="changeEmail">E-Mail ändern</string>
    <string name="changePassword">Passwort ändern</string>
    <string name="noLists">Es wurden noch keine Listen angelegt</string>
    <string name="login">Login</string>
    <string name="editList">Liste bearbeiten</string>
    <string name="save">Speichern</string>
    <string name="send">Protokoll Senden</string>
    <string name="edit">Bearbeiten</string>
    <string name="title">Titel</string>
    <string name="deleteTasks">Ausgewählte Aufgaben entfernen</string>
    <string name="newTask">neue Aufgabe hinzufügen</string>
    <string name="saveTask">Aufgabe hinzufügen</string>
    <string name="cancel">Abbrechen</string>
    <string name="accessDelete">endgültig Löschen?</string>
    <string name="delete">Löschen</string>
    <string name="newTitle">neuer Titel</string>
    <string name="error_Title_Exists">Es existiert bereits eine Liste mit dieser Bezeichnung. Andere Bezeichnung wählen.</string>
    <string name="error_Task_Exists">Es existiert bereits eine Aufgabe mit dieser Bezeichnung. Andere Bezeichnung wählen.</string>
    <string name="error_empty_textfield">Eingabe darf nicht leer sein.</string>
    <string name="sign_up">Registrieren</string>
    <string name="add">hinzufügen</string>
    <string name="deleteList">Liste Löschen</string>
    <string name="error_empty_Tasks">Bitte Aufgaben hinzufügen. Aufgabenliste darf nicht leer sein.</string>
    <string name="no_empty_tasks">Leere Aufgabenliste nicht zulässig. Bitte komplette Liste löschen.</string>
    <string name="last_used_list">Zuletzt verwendete Liste:</string>
    <string name="last_action">Zuletzt verwendete Checkliste</string>
    <string name="no_used_list">Noch keine Checkliste verwendet.</string>
    <string name="deletion_failed">Fehler beim Löschen</string>
    <string name="saving_failed">Fehler beim Speichern</string>
    <string name="error_email_not_valid">Bitte gültiges Email-Adressen-Format eingeben</string>
    <string name="new_shared_list">Neue freigegebene Liste. Nutze Liste importieren zum hinzufügen.</string>
    <string name="error_writing_to_db">Error writing document</string>
    <string name="shareList">Liste teilen</string>
    <string name="share_with_user">Für welchen Nutzer soll die Liste freigegeben werden? Der Nutzer erhält eine Kopie der Liste.</string>
    <string name="user_not_found">Benutzer existiert nicht.</string>
    <string name="error_is_already_shared">Liste wurde für diesen Benutzer bereits freigegeben. Benutzer muss Import bestätigen.</string>
    <string name="import_list">Liste importieren</string>
    <string name="shared_lists">Mit mir geteilte Listen:</string>
    <string name="no_document_in_db">Die geteilte Liste wurde vom Besitzer gelöscht. Liste kann nicht mehr importiert werden.</string>
    <string name="successful_shared">"Die Liste wurde für den Nutzer freigegeben: "</string>
    <string name="delete_list">Liste löschen</string>
    <string name="successfull_deleted">Löschen erfolgreich.</string>
    <string name="sharing_failed">Die Liste konnte nicht geteilt werden. Datenbankfehler.</string>
    <string name="imported">(importiert)</string>
    <string name="import_failed">Fehler beim importieren.</string>
    <string name="successfull_imported">Liste erfolgreich importiert:</string>
    <string name="shared_list_deleted">Die freigegebene Liste wurde erfolgreich entfernt.</string>
    <string name="error_reset_password">Fehler.</string>
    <string name="email_sent">E-Mail gesendet. Zum Ändern des Passworts auf den Link in der E-Mail klicken.</string>
    <string name="successfull_signed_up">Registrierung erfolgreich.</string>
    <string name="enterEmail">E-Mail Adresse eingeben</string>
    <string name="enterPassword">Passwort eingeben</string>
    <string name="snapshot_deleted">DocumentSnapshot successfully deleted!</string>
    <string name="error_deleting_snapshot">Error deleting document snapshot</string>
    <string name="error_deleting_user">Error deleting user</string>
    <string name="user_deleted">User account successfully deleted.</string>
    <string name="ready">fertig</string>
    <string name="history">Historie</string>
    <string name="error_reading_db">Fehler bei Datenbankzugriff</string>
    <string name="approved">bestätigt.</string>
    <string name="missingTasks">Fehlende Aufgaben:</string>
    <string name="saved_to_history">In der Historie gespeichert.</string>

</resources>