<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/access_delete_popup_element"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="8dp"
            android:onClick="accessDeleteClick"
            android:text="@string/delete"
            android:background="@color/red"
            android:textAllCaps="false"
            tools:ignore="RelativeOverlap" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="8dp"
            android:background="@color/colorAccent"
            android:onClick="cancelClick"
            android:textAllCaps="false"
            android:text="@string/cancel" />



        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="80dp"
            android:text="@string/accessDelete"
            android:gravity="center"
            android:textSize="22sp" />


    </RelativeLayout>
